# KarabinerKeyboard

./: .gitignore  .gitmodules  README.md  Taskfile.yml  base_panel.py  config.py  content_panel.py  help_view.py  karabiner_config.py  key_mappings.py  keyboard_view.py  list_panel.py  main.py  modification.py  modification_pair.py  overrides.py  overrides_view.py  pyproject.toml  pyrightconfig.json  registry.py  test.py  window.py
.github/workflows/: release.yml
images/: icon.icns
karabinerkeyboard/: builder.py  notarization.py
karabinerkeyboardsite/: hugo.toml
karabinerkeyboardsite/content/: _index.md
karabinerkeyboardsite/public/: 404.html  index.html  index.xml  sitemap.xml
src/: analytics.py  base_panel.py  config.py  content_panel.py  drawing_helper.py  help_view.py  karabiner_config.py  key_mappings.py  keyboard_controller.py  keyboard_search_section.py  keyboard_state_controller.py  keyboard_view.py  list_panel.py  main.py  modification.py  modification_change_view.py  modification_pair.py  mouse_controller.py  overrides_view.py  window.py
src/components/: drawing_helper.py  modification_change_view.py  text_input.py
src/devices/: keyboard_controller.py  mouse_controller.py
src/logic/: application.py  bundle.py  bundle_ids.py  condition.py  event_bus.py  global_state.py  karabiner_config.py  key_mappings.py  keyboard_state_controller.py  layer_colors.py  merge_kb_config.py  modification.py  modification_pair.py  yaml_config.py
src/panels/: base_panel.py  click_handler.py  content_panel.py  global_vars.py  list_panel.py
src/versions/: update.sh  update_view.py  updates.py  version_compare.py
src/views/: ask_view.py  edit_view.py  help_view.py  key_view.py  keyboard_search_section.py  keyboard_view.py  layer_tabs_view.py  overrides_view.py
test/: out.json  test_command.py  test_config.yaml  test_convert.py  test_fallthrough.py
(+26 files in other folders)
