[project]
name = "karabinerkeyboard"
version = "0.1.0"
description = ""
authors = [{name = "Patrick Cunniff", email = "pjcfifa@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "raylib>=5.5.0.1",
  "requests>=2.32.3",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.3.0",
]

[project.scripts]
bundle-app = "karabinerkeyboard.builder:bundle_app"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["karabinerkeyboard"]  # Must specify packages
include-package-data = true

[tool.setuptools.package-data]
karabinerkeyboard = ["*.yaml", "*.json"]  # Must specify data files

